--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
         transitive = true
     }
 //    compile 'com.google.android.gms:play-services:9.2.0'
+    androidTestCompile 'org.testng:testng:6.9.6'
+    androidTestCompile 'junit:junit:4.12'
 }
 
 apply plugin: 'com.google.gms.google-services'
