--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="nutritiondb.ben.db2">
 
     <application
         android:name=".Application"
+
         android:allowBackup="true"
         android:icon="@drawable/app_logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" ><!--@android:style/Theme.Holo.Light.DarkActionBar-->
+        android:theme="@style/AppTheme"
+        tools:node="merge"><!--@android:style/Theme.Holo.Light.DarkActionBar-->
 
         <activity android:name=".MainActivity">
             <intent-filter>
